...
                .foregroundColor(.yellow)
                .transition(.scale)
                .opacity(viewModel.cardObject.isFavorited ? 1 : 0.3)
        }
        .frame(width: 30, height: 30)
        .offset(x: 10, y: -10)
        .accessibilityIdentifier("favoriteButton")
        .onTapGesture {
            if viewModel.cardObject.id != nil {
                viewModel.setIsFavorited(!viewModel.cardObject.isFavorited)
            } else {
                viewModel.cardObject.isFavorited.toggle()
            }
...
    var viewModel: CardDetailsViewModel
    
    var body: some View {
        VStack(alignment: .leading, spacing: 15) {
            if isEditable {
                TextField("Name", text: $cardName)
                    .accessibilityIdentifier("cardNameField")
                    .onChange(of: cardName) { _, newValue in
                        self.cardName = String(cardName.prefix(20)).uppercased()
                    }
                    .fontWeight(.bold)
                    .dynamicTypeSize(.xSmall ... .xxxLarge)
                    .font(.headline)
...
                    .foregroundStyle(Color.inverseSystemBackground)
                    .padding(.top, 1)
                
            }
            if isEditable {
                TextField("Number", text: $cardNumber)
                    .accessibilityIdentifier("cardNumberField")
                    .font(.title3)
                    .keyboardType(.numberPad)
                    .fontWeight(.bold)
                    .dynamicTypeSize(.xSmall ... .xxxLarge)
                    .foregroundStyle(Color.secondary)
                    .onChange(of: cardNumber, initial: true) { _, newValue in
...
                .font(.caption)
                .dynamicTypeSize(.xSmall ... .xxxLarge)
                .fontWeight(.semibold)
                .padding(.top, isEditable ? 0 : 0.5)
            if isEditable {
                TextField(cvvLabel, text: $cvvCode)
                    .accessibilityIdentifier("cvvField")
                    .font(.headline)
                    .fontWeight(.bold)
                    .keyboardType(.numberPad)
                    .dynamicTypeSize(.xSmall ... .xxxLarge)
                    .foregroundStyle(Color.secondary)
                    .onChange(of: cvvCode, initial: true) { _, newValue in
...
                .font(.caption)
                .dynamicTypeSize(.xSmall ... .xxxLarge)
                .fontWeight(.semibold)
                .padding(.top, isEditable ? 0 : 0.5)
            if isEditable {
                TextField("Pin", text: $pin)
                    .accessibilityIdentifier("pinField")
                    .font(.headline)
                    .fontWeight(.bold)
                    .multilineTextAlignment(.center)
                    .keyboardType(.numberPad)
                    .dynamicTypeSize(.xSmall ... .xxxLarge)
                    .foregroundStyle(Color.secondary)
...
struct ExpiryDateTextField: View {
    @Binding var expiryDate: String
    let maxDigits: Int = 4
    
    var body: some View {
        TextField("MM/YY", text: $expiryDate)
            .accessibilityIdentifier("expiryDateField")
            .keyboardType(.numberPad)
            .onChange(of: expiryDate, initial: true) { _, newValue in
                let filtered = newValue.filter { "0123456789".contains($0) }
                
                if filtered.count > 2 {
                    let prefix = String(filtered.prefix(2))
...
